--- a/_sass/helpers/_variables.scss
+++ b/_sass/helpers/_variables.scss
@@ -11,8 +11,8 @@ $c-base__1: #96A0A0;
 $c-base__2: #EDE7D6;
 $c-base__3: #FCF5E4;
 
-$c-accent__blue: #0067FB;
-$c-accent__darkblue: #0029F9;
+$c-accent__blue: #3D9970; // Changed to olive color, original theme use blue
+$c-accent__darkblue: #29694c;
 $c-accent__green: #8BE367;
 
 // Breakpoints
